<resources>
    <string name="app_name">Мастерок</string>
    <string name="title_activity_navi_fun">Тип фундамента</string>
    <string name="title_activity_fun1">Тип 1</string>
    <string name="action_nastroi">На главную</string>
    <string name="action_email">Тип фундамента</string>
    <string name="action_info">О кнопках</string>
    <string name="ress">Сброс результата</string>
    <string name="vixod">Выход</string>
    <string name="activity_web_beton">Поиск бетона ...</string>
    <string name="armatura">Арматуру запрещено соединять в местах максимального напряжения стержней
        и зонах приложения (концентрированного) нагрузки на них.</string>
    <string name="activity_web_armatura">О бетоне</string>
    <string name="title_activity_perimetr">Тип - периметр</string>
    <string name="one">ПОИСК</string>
    <string name="three">Данных пока нет</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="my_tb_title">Расчет кирпича</string>
    <string name="web_beton">Поиск бетона ...</string>
    <string name="my_fundamenti">Форма фундамента</string>
    <string name="web_armatura">Поиск арматуры ...</string>
    <string name="web_plus">Сообщение</string>
    <string name="Beton">Бетон (м3):</string>
    <string name="cena">Цена (бетон):</string>
    <string name="cenaarmatury">Стоимость арматуры:</string>
    <string name="razmer_a">Размер A:</string>
    <string name="razmer_b">Размер B:</string>
    <string name="wirina_fundamenta">Ширина фундамента:</string>
    <string name="glubina_fundamenta">Глубина фундамента:</string>
    <string name="cena_betona_za_m3">Стоимость бетона (за куб):</string>
    <string name="ryadi_armaturi_a">Количество рядов арматуры (А):</string>
    <string name="naxlest">Нахлест арматуры(%):</string>
    <string name="diametr_prodolnoy_arm">A - диаметр продольной арматуры:</string>
    <string name="diametr_arm_prosto">Диаметр арматуры:</string>
    <string name="diametr_obvyazki">B - диаметр арматуры обвязки:</string>
    <string name="wag_obvyazki">C - шаг обвязки:</string>
    <string name="cena_armaturi_za_kg">Стоимость арматуры (за кг):</string>
    <string name="cena_armaturi_vsya">Стоимость арматуры:</string>
    <string name="Perimetr_fundamenta">Периметр армопояса P:</string>
    <string name="tolshina_pliti">Толщина плиты перекрытия:</string>
    <string name="sloi_armaturi">Количество слоев арматуры:</string>
    <string name="wag_ukladki">n - шаг укладки арматуры:</string>
    <string name="radius_r">Радиус R:</string>
    <string name="fundament_menu">Фундамент</string>
    <string name="dastroyka_menu">Достройка</string>
    <string name="plita_menu">Плита</string>
    <string name="kolonna_menu">Колонна</string>
    <string name="razmer_c">Размер C:</string>
    <string name="dlina_fundamenta">Длина фундамента А:</string>
    <string name="arm1">Арматуру запрещено соединять</string>
    <string name="arm2">в местах максимального</string>
    <string name="arm3">напряжения стержней и зонах</string>
    <string name="arm4">приложения концентрированой</string>
    <string name="arm5">нагрузки на них.</string>
    <string name="Information">Информация</string>
    <string name="Poisk">Поиск материалов</string>
    <string name="Instruktion">Инструкция</string>
    <string name="vvedite_znachenie">Введите значение для кнопки</string>
    <string name="pervoe_vnesenie_dannix">Первое внесение данных</string>
    <string name="nagmite_ok">(нажмите: Ок)</string>
    <string name="vvedite_cenu">Введите свою цену</string>
    <string name="vvedite_wag">Введите свой шаг</string>
    <string name="eto_standart">Это стандартный размер</string>
    <string name="eto_fiks">Это фиксированое значение</string>
    <string name="obnulit_danie">Обнулить данные?</string>
    <string name="title_activity_kolona3">Прямоугольная колона</string>
    <string name="tema_pisma">Тема письма:</string>
    <string name="soobwenie">Сообщение:</string>
    <string name="vibirite_kartinku">  Приложить картинку, фото  </string>
    <string name="betonir_start">БЕТОНИР</string>
    <string name="armatura_m_kg">Арматура: A (м/кг):</string>
    <string name="B_m_kg">Арм.:B (м/кг):</string>
    <string name="arm_m_kg_bes">Арматура (м/кг):</string>
    <string name="bet">Бетон</string>
    <string name="arm">Арматура</string>
    <string name="pro">Версия Pro</string>
    <string name="kirpish">Кирпич (расчет)</string>
    <string name="kirp_bar">Мастерок</string>
    <string name="my_tb_title23">Расчет блоков</string>
    <string name="app_name2">Инструкция</string>
    <string name="title_activity_plitka">PlitkaActivity</string>
    <string name="my_tb_title2322">Расчет плитки</string>
    <string name="title_activity_armo">Армопояс</string>
    <string name="title_activity_plitka2">Плитка на пол</string>
    <string name="my_tb_title23223">Плитка на пол</string>
    <string name="my_tb_title77">Армопояс</string>
    <string name="title_activity_plitka3">Плитка пол + стена</string>
    <string name="title_activity_start2">Start2Activity</string>
    <string name="title_activity_st1">Стяжка</string>
    <string name="my_tb_title232231">Стяжка</string>
    <string name="title_activity_st2">Стяжка</string>
    <string name="my_tb_title_samo_s">Наливной пол, S</string>
    <string name="my_tb_title_cement_a_b">Стяжка (цемент)</string>
    <string name="my_tb_title_samo_a_b">Наливной пол</string>
    <string name="title_activity_st22">Шпаклевка, S</string>
    <string name="my_tb_title_samo_s2">Шпаклевка, S</string>
    <string name="title_activity_st222">Шпаклевка, A+B</string>
    <string name="my_tb_title_samo_a_b222">Шпаклевка, A+B</string>
    <string name="my_tb_title_samo_a_b223">Наливной пол, A+B</string>
    <string name="title_activity_st2212">Плита Прямоугольник</string>
    <string name="title_activity_st22245">Плита Круг</string>
    <string name="my_tb_title78">Плита Прямоугольная</string>
    <string name="my_tb_title69">Плита Круглая</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_st222452">Электромонтаж</string>
    <string name="my_tb_title_elektro">Электромонтаж</string>
    <string name="my_tb_title_samo_s278">Покраска</string>
    <string name="title_activity_kr_s">Покраска</string>
    <string name="my_tb_title_kr_long">Покраска А+В+С</string>
    <string name="my_tb_title_kr_s">Покраска S</string>
    <string name="title_activity_kr_l">Покраска А+B+C</string>
    <string name="title_activity_kr_s2">Покраска S</string>
    <string name="my_tb_title_kr_s_2">Покраска S (л)</string>
    <string name="my_tb_title_kr_s33">Покраска S (кг)</string>
    <string name="my_tb_title_kr_s331">Покраска S (л)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_kr_s29">Пенопласт</string>
    <string name="ukr">ukr1</string>
    <string name="title_activity_sovet_penoplast">Утепление</string>
    <string name="title_activity_sovet_penoplast2_">Пенопласт</string>
    <string name="kirp1">Кирпич</string>
    <string name="plita1">Плита</string>
    <string name="armopojas1">Армопояс</string>
    <string name="plitka">Плитка</string>
    <string name="kriwa1">Крыша</string>
    <string name="bloki1">Блоки</string>
    <string name="pinoplast1">Пенопласт</string>
    <string name="pokraska1">Покраска</string>
    <string name="gipsokarton1">Гипсокартон</string>
    <string name="pinoplast2">Пенопласт</string>
    <string name="septik1">Септик</string>
    <string name="styagka1">Стяжка</string>
    <string name="radiatori1">Радиаторы</string>
    <string name="radiatori2">Радиаторы</string>
    <string name="elektro">Электро</string>
    <string name="demontag1">Демонтаж</string>
    <string name="dem_pol1">Демонтаж, пол</string>
    <string name="dem_potolki">Демонтаж, потолки</string>
    <string name="dem_steni">Демонтаж, стены</string>
    <string name="dvuskat1">Двускатная крыша</string>
    <string name="gipsokarton_standart1">Гипсокартон, стандарт</string>
    <string name="gip_lite">Гипсокартон, эконом</string>
    <string name="kras_kg">Краска, кг</string>
    <string name="kras_litri">Краска, л</string>
    <string name="ras_sept">Расчет объема септика</string>
    <string name="dvuskat_pristroyka">Двускат, пристройка</string>
    <string name="plit_na_pol">Плитка на пол</string>
    <string name="naliv_pol_a_b">Наливной пол, А_В</string>
    <string name="nal_pol_s">Наливной пол,  S</string>
    <string name="sep_kirp_krug">Круглый септик из кирпича</string>
    <string name="shpakl_a_b">Шпаклевка, A_B</string>
    <string name="shp_s">Шпаклевка, S</string>
    <string name="cement_stagka1_A_B">Цементная стяжка, A_B</string>
    <string name="cem_st_s">Цементная стяжка, S</string>
    <string name="bloki_m3_wt">Блоки, м3/шт:</string>
    <string name="cena_bloki1">Стоимость блоков:</string>
    <string name="kol_rastvora">Количество раствора, м3:</string>
    <string name="ili_kley">или клей (25 кг):</string>
    <string name="visota_steni_A_m">Высота стены А, м:</string>
    <string name="dlina_steni_B_m">Длина стены В, м:</string>
    <string name="s_poyamov">Площадь проемов (дверей, окон), м2:</string>
    <string name="stoim_blokov">Стоимоть блоков (за куб):</string>
    <string name="tip_kladki">Тип кладки (стена, вид сбоку):</string>
    <string name="vdol1">1- вдоль</string>
    <string name="na_rebro">2- на ребро</string>
    <string name="poperek">3- поперек</string>
    <string name="tolw_rstvora">Толщина слоя раствора, мм:</string>
    <string name="dlina_bloka">Длина блока, мм:</string>
    <string name="wir_bloka">Ширина блока, мм:</string>
    <string name="vis_bloka">Высота блока, мм:</string>
    <string name="utoshnit_razmer">Уточнить размеры:</string>
    <string name="stoimost_rabot">Стоимость всех выполненых работ:</string>
    <string name="demont_lami">Демонтаж ламината:</string>
    <string name="dem_park">Демонтаж паркета:</string>
    <string name="dem_kovr">Демонтаж ковролина:</string>
    <string name="der_pol">Деревяный пол:</string>
    <string name="keram_plitka">Керамическая плитка:</string>
    <string name="cem_stagka">Цементно-пещаная стяжка:</string>
    <string name="dem_lenol">Демонтаж линолеума:</string>
    <string name="dem_plintusa">Плинтуса, порожки:</string>
    <string name="cena_rabot_m2">*цена за работу / за м2</string>
    <string name="lamin_m2">Ламинат, м2:</string>
    <string name="dem_lam_cen">Демонтаж ламината, *цена:</string>
    <string name="parket_m2">Паркет, м2.:</string>
    <string name="dem_parketa_cena">Демонтаж паркета, *цена:</string>
    <string name="kovrolin_m2">Ковролин, м2.:</string>
    <string name="dem_kov">Демонтаж ковролина, *цена:</string>
    <string name="der_pol2">Деревяный пол , м2.:</string>
    <string name="dem_pola_cena">Демонтаж деревяного пола, *цена:</string>
    <string name="ker_plitka_m2">Керамическая плитка, м2:</string>
    <string name="dep_ker">Демонтаж керамической плитки, *цена:</string>
    <string name="cem_sty_m2">Цементно-пещаная стяжка, м2.:</string>
    <string name="dem_st">Демонтаж стяжки, *цена:</string>
    <string name="linom_2">Линолиум, м2:</string>
    <string name="dem_leny">Демонтаж линолеума, *цена:</string>
    <string name="plint_porogki">Плинтуса, порожки, метров пог.:</string>
    <string name="dem_por">Демонтаж плинтусов, порожков, цена за м.п.:</string>
    <string name="wpakl">Шпаклевка</string>
    <string name="insrukcia">Инструкция</string>
    <string name="we_app">Еще приложения</string>
    <string name="podelica">Поделится</string>
    <string name="nap_nam">Написать нам</string>
    <string name="bez_rek">Версия без рекламы</string>
    <string name="plit_napol2">Плитка на пол</string>
    <string name="you_tub">You Tube</string>
</resources>