<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/infi"
        android:icon="@drawable/ic_info"
        android:title="@string/insrukcia" />

    i
    <item
        android:id="@+id/market"
        android:icon="@mipmap/ic_app"
        android:title="@string/we_app" />


    <item
        android:id="@+id/napisat"
        android:icon="@mipmap/ic_pismo"
        android:title="@string/nap_nam" />

    <item
        android:id="@+id/pro1"
        android:icon="@mipmap/ic_pismo"
        android:title="@string/pro" />

    <item
        android:id="@+id/you_tube"
        android:icon="@mipmap/ic_pismo"
        android:title="@string/you_tub" />

    <item
        android:id="@+id/versia"
        android:title="v 6.0.8" />






</menu>
