<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorPrimary"
    android:baselineAligned="false">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView25"
        android:src="@android:drawable/ic_dialog_alert"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arm1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:inputType="date|numberDecimal"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arm2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:inputType="date|numberDecimal"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arm3"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:inputType="date|numberDecimal"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arm4"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:inputType="date|numberDecimal"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arm5"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:inputType="date|numberDecimal"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff" />

</LinearLayout>